--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,10 +16,10 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: '11' # Adjust the version to your plugin's requirements
+          java-version: '11'
 
-      - name: Build JAR
-        run: mvn package # This command will build your plugin and create the JAR
+      - name: Build with Maven
+        run: mvn package
 
   release:
     needs: build
@@ -32,14 +32,14 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: '11' # Adjust the version to your plugin's requirements
+          java-version: '11'
 
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            target/MaskedCratesAPI.jar # Adjust the path to your built JAR
+            target/MaskedCratesAPI-*.jar
           tag_name: v${{ github.run_number }} # Use the run number as the release version
           release_name: Release v${{ github.run_number }}
           draft: false
@@ -50,6 +50,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/MaskedCratesAPI.jar # Adjust the path to your built JAR
+          asset_path: target/MaskedCratesAPI-*.jar
           asset_name: MaskedCratesAPI.jar
           asset_content_type: application/java-archive
