--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,15 +8,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: maven:3-jdk-11
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Set up JDK
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
 
       - name: Build with Maven
         run: mvn package
@@ -28,11 +25,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Set up JDK
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
 
       - name: Create Release
         id: create_release
