--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,15 +8,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: maven:3-jdk-8  # Use Java 8 with Node.js 16
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v2
-        with:
-          java-version: '1.8'  # Set Java version to 1.8
 
       - name: Build with Maven
         run: mvn package
@@ -24,15 +21,12 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
+    container:
+      image: maven:3-jdk-8  # Use Java 8 with Node.js 16
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v2
-        with:
-          java-version: '1.8'  # Set Java version to 1.8
 
       - name: Create Release
         id: create_release
