--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,13 +21,8 @@ jobs:
       - name: Show Maven version
         run: mvn -version
 
-      - name: Prepare working directory
-        run: mkdir -p MaskedCratesAPI
-        working-directory: ${{ github.workspace }}
-
       - name: Build with Maven
-        run: mvn package -f MaskedCratesAPI  # Specify the correct directory
-        working-directory: ${{ github.workspace }}/MaskedCratesAPI
+        run: mvn package
 
   release:
     needs: build
@@ -47,7 +42,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            MaskedCratesAPI/target/MaskedCratesAPI-*.jar
+            target/MaskedCratesAPI-*.jar
           tag_name: v${{ github.run_number }}
           release_name: Release v${{ github.run_number }}
           draft: false
@@ -58,6 +53,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: MaskedCratesAPI/target/MaskedCratesAPI-*.jar
+          asset_path: target/MaskedCratesAPI-*.jar
           asset_name: MaskedCratesAPI.jar
           asset_content_type: application/java-archive
