--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,12 +8,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: maven:3-jdk-8
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: '17'  # Set Java version to 17
 
       - name: Show Java version
         run: java -version
@@ -27,12 +30,15 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
-    container:
-      image: maven:3-jdk-8
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: '17'  # Set Java version to 17
 
       - name: Show Java version
         run: java -version
