--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            target/MaskedCratesAPI-*.jar
+            target/MaskedCratesAPI-1.0-SNAPSHOT.jar
           tag_name: v${{ github.run_number }}
           release_name: Release v${{ github.run_number }}
           draft: false
@@ -59,6 +59,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/MaskedCratesAPI-*.jar
-          asset_name: MaskedCratesAPI.jar
+          asset_path: target/MaskedCratesAPI-1.0-SNAPSHOT.jar
+          asset_name: MaskedCratesAPI-v${{ github.run_number }}.jar
           asset_content_type: application/java-archive
