--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v1.4.4
         with:
           java-version: '17'  # Set Java version to 17
 
@@ -28,6 +28,12 @@ jobs:
 
       - name: Build with Maven
         run: mvn package
+        
+      - name: Archive JAR file
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          name: MaskedCratesAPI
+          path: target/MaskedCratesAPI-1.0-SNAPSHOT.jar
 
   release:
     needs: build
@@ -44,6 +50,12 @@ jobs:
 
       - name: Show Java version
         run: java -version
+
+      - name: Download JAR file
+        uses: actions/download-artifact@v2.1.1
+        with:
+          name: MaskedCratesAPI
+          path: target/
 
       - name: Create Release
         id: create_release
