--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,11 +68,11 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/MaskedCratesAPI-1.0-SNAPSHOT.jar
-          asset_name: MaskedCratesAPI-${{ github.event.inputs.version }}.jar
-          asset_content_type: application/java-archive
+     # - name: Upload Release Asset
+ #       id: upload-release-asset
+ #       uses: actions/upload-release-asset@v1
+ #       with:
+ #         upload_url: ${{ steps.create_release.outputs.upload_url }}
+  #        asset_path: target/MaskedCratesAPI-1.0-SNAPSHOT.jar
+  #        asset_name: MaskedCratesAPI-${{ github.event.inputs.version }}.jar
+  #        asset_content_type: application/java-archive
