--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,8 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version for the release'
+        description: 'Enter the version in semantic version format (e.g., 1.0.0)'
         required: true
+        default: '1.0.0'
 
 jobs:
   build:
@@ -20,12 +21,6 @@ jobs:
         with:
           java-version: '17'  # Set Java version to 17
 
-      - name: Show Java version
-        run: java -version
-
-      - name: Show Maven version
-        run: mvn -version
-
       - name: Build with Maven
         run: mvn package
         
@@ -34,7 +29,7 @@ jobs:
         with:
           name: MaskedCratesAPI
           path: target/MaskedCratesAPI-1.0-SNAPSHOT.jar
-
+      
   release:
     needs: build
     runs-on: ubuntu-latest
@@ -48,31 +43,24 @@ jobs:
         with:
           java-version: '17'  # Set Java version to 17
 
-      - name: Show Java version
-        run: java -version
-
       - name: Download JAR file
         uses: actions/download-artifact@v2.1.1
         with:
           name: MaskedCratesAPI
           path: target/
 
+      - name: Rename Jar
+        run: |
+          mv target/MaskedCratesAPI-*.jar target/MaskedCratesAPI-${{ github.event.inputs.version }}.jar
+
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            target/MaskedCratesAPI-1.0-SNAPSHOT.jar
+            target/MaskedCratesAPI-${{ github.event.inputs.version }}.jar
           tag_name: ${{ github.event.inputs.version }}
           release_name: Release v${{ github.event.inputs.version }}
+          generate_release_notes: true
           draft: false
           prerelease: false
-
-     # - name: Upload Release Asset
- #       id: upload-release-asset
- #       uses: actions/upload-release-asset@v1
- #       with:
- #         upload_url: ${{ steps.create_release.outputs.upload_url }}
-  #        asset_path: target/MaskedCratesAPI-1.0-SNAPSHOT.jar
-  #        asset_name: MaskedCratesAPI-${{ github.event.inputs.version }}.jar
-  #        asset_content_type: application/java-archive
