--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,10 +17,16 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v1.4.4
+        uses: actions/setup-java@v1
         with:
           java-version: '17'  # Set Java version to 17
 
+      - name: Show Java version
+        run: java -version
+
+      - name: Show Maven version
+        run: mvn -version
+        
       - name: Build with Maven
         run: mvn package
         
