--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,28 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.furnesse</groupId>
-    <artifactId>MaskedCratesAPI</artifactId>
+    <groupId>com.furnesse.maskedcrates</groupId>
+    <artifactId>parent</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
-    <name>MaskedCratesAPI</name>
+    <name>MaskedCratesAPI Parent</name>
+    <description>This is the parent POM for the MaskedCratesAPI.</description>
+
+    <modules>
+        <module>api</module>
+        <module>extension</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <build>
+        <defaultGoal>clean package</defaultGoal>
+    </build>
 
     <repositories>
         <repository>
