--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,6 +61,10 @@ jobs:
           #name: MaskedCratesAPI-${{ env.VERSION }}
           path: target/
 
+      - name: Get Version from POM
+        id: get_version
+        run: echo "VERSION=$(grep -m1 '<version>' api/pom.xml | sed 's/.*<version>\(.*\)<\/version>.*/\1/')" >> $GITHUB_ENV
+
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
