--- a/extension/pom.xml
+++ b/extension/pom.xml
@@ -4,7 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.furnesse.maskedcrates</groupId>
+    <parent>
+        <groupId>com.furnesse.maskedcrates</groupId>
+        <artifactId>parent</artifactId>
+        <version>2.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>ExampleExtension</artifactId>
     <packaging>jar</packaging>
 
