--- a/api/pom.xml
+++ b/api/pom.xml
@@ -8,6 +8,7 @@
         <artifactId>parent</artifactId>
         <version>2.0-SNAPSHOT</version>
     </parent>
+    <version>1.0.0</version>
 
     <artifactId>MaskedCratesAPI</artifactId>
     <packaging>jar</packaging>
