--- a/extension/pom.xml
+++ b/extension/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>com.furnesse.maskedcrates</groupId>
             <artifactId>MaskedCratesAPI</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
