--- a/api/pom.xml
+++ b/api/pom.xml
@@ -8,7 +8,7 @@
         <artifactId>parent</artifactId>
         <version>2.0-SNAPSHOT</version>
     </parent>
-    <version>1.1.0</version>
+    <version>1.0.0</version>
 
     <artifactId>MaskedCratesAPI</artifactId>
     <packaging>jar</packaging>
@@ -24,5 +24,18 @@
 
     <build>
         <defaultGoal>clean install</defaultGoal>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
