--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       
       - name: Get Version from POM
         id: get_version
-        run: echo "VERSION=$(grep -m1 '<version>' api/pom.xml | sed 's/.*<version>\(.*\)<\/version>.*/\1/')" >> $GITHUB_ENV
+        run: echo "VERSION=$(grep -m1 '<version>[^<]*<\/version>' api/pom.xml | sed 's/.*<version>\([^<]*\)<\/version>.*/\1/')" >> $GITHUB_ENV
 
       - name: Print Version
         run: echo "Version:\ ${{ env.VERSION }}"
