--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,8 @@ jobs:
       
       - name: Get Version from POM
         id: get_version
-        run: echo "VERSION=$(grep -m1 '<version>[^<]*<\/version>' api/pom.xml | sed 's/.*<version>\([^<]*\)<\/version>.*/\1/')" >> $GITHUB_ENV
+        working-directory: ./api
+        run: echo "VERSION=$(grep -m1 '<version>[^<]*<\/version>' pom.xml | sed 's/.*<version>\([^<]*\)<\/version>.*/\1/')" >> $GITHUB_ENV
 
       - name: Print Version
         run: echo "Version:\ ${{ env.VERSION }}"
@@ -63,7 +64,8 @@ jobs:
 
       - name: Get Version from POM
         id: get_version
-        run: echo "VERSION=$(grep -m1 '<version>' api/pom.xml | sed 's/.*<version>\(.*\)<\/version>.*/\1/')" >> $GITHUB_ENV
+        working-directory: ./api
+        run: echo "VERSION=$(grep -m1 '<version>[^<]*<\/version>' pom.xml | sed 's/.*<version>\([^<]*\)<\/version>.*/\1/')" >> $GITHUB_ENV
 
       - name: Create Release
         id: create_release
