--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Archive JAR file
         uses: actions/upload-artifact@v3
         with:
-          name: MaskedCratesAPI
+        #  name: MaskedCratesAPI
           path: api/target/MaskedCratesAPI-${{ env.VERSION }}.jar
       
   release:
@@ -55,7 +55,7 @@ jobs:
       - name: Download JAR file
         uses: actions/download-artifact@v2.1.1
         with:
-          name: MaskedCratesAPI
+        #  name: MaskedCratesAPI
           path: api/target/MaskedCratesAPI-${{ env.VERSION }}.jar
 
       - name: Get Version from POM
