--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Archive JAR file
         uses: actions/upload-artifact@v3
         with:
-          name: MaskedCratesAPI-${{ env.VERSION }}.jar
+          name: MaskedCratesAPI
           path: api/target/MaskedCratesAPI-${{ env.VERSION }}.jar
       
   release:
@@ -63,7 +63,7 @@ jobs:
       - name: Download JAR file
         uses: actions/download-artifact@v2.1.1
         with:
-          name: MaskedCratesAPI-${{ env.VERSION }}.jar
+          name: MaskedCratesAPI
           path: api/target/MaskedCratesAPI-${{ env.VERSION }}.jar
 
       - name: Create Release
@@ -71,7 +71,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            target/MaskedCratesAPI-${{ env.VERSION }}.jar
+            api/target/MaskedCratesAPI-${{ env.VERSION }}.jar
           tag_name: v${{ env.VERSION }}-${{ github.run_number }}
           name: Release v${{ env.VERSION }}
           generate_release_notes: true
