--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,6 +1,24 @@
-# jitpack.yml
-jdk:
-  - openjdk8
+java:
+  - openjdk17
+
+before_install:
+  - chmod +x mvnw
 
 install:
-  - cd api
+  - ./mvnw clean install -DskipTests=true -Dmaven.javadoc.skip=true
+
+branches:
+  only:
+    - main
+
+cache:
+  directories:
+    - $HOME/.m2
+
+deploy:
+  provider: releases
+  api_key: $GITHUB_TOKEN
+  file: api/target/MaskedCratesAPI-${version}.jar
+  skip_cleanup: true
+  on:
+    tags: true
