--- a/jitpack.yml
+++ b/jitpack.yml
@@ -16,10 +16,10 @@ cache:
   directories:
     - $HOME/.m2
 
-deploy:
-  provider: releases
-  api_key: $GITHUB_TOKEN
-  file: api/target/MaskedCratesAPI-${version}.jar
-  skip_cleanup: true
-  on:
-    tags: true
+#deploy:
+#  provider: releases
+#  api_key: $GITHUB_TOKEN
+#  file: api/target/MaskedCratesAPI-${version}.jar
+#  skip_cleanup: true
+#  on:
+#    tags: true
