--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           files: |
             api/target/MaskedCratesAPI-${{ env.VERSION }}.jar
-          tag_name: v${{ env.VERSION }}-${{ github.run_number }}
+          tag_name: ${{ env.VERSION }}-${{ github.run_number }}
           name: Release v${{ env.VERSION }}
           generate_release_notes: true
           draft: false
